fix(infinite-logo): style infinite logo on safari

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -77,7 +77,7 @@
     left: 0px;
     height: auto;
     padding: 1rem;
-    width: -webkit-fill-available;
+    width: 100%;
     width: -moz-available;
     width: stretch;
   }
